# grinder

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.ha.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: acceptance_packet.yml  ci-smoke.yml  ci.yml  ci_runner_outage_rerun.yml  determinism_suite.yml  docker_smoke.yml  nightly_soak.yml  pr_body_guard.yml  promtool.yml  proof_guard.yml  replay_determinism.yml  secret_guard.yml  smoke_gate.yml  soak_gate.yml  triage_bundle_on_failure.yml
docs/: 00_PRODUCT.md  01_GLOSSARY.md  02_DATA_SOURCES.md  03_ARCHITECTURE.md  04_PREFILTER_SPEC.md  05_FEATURE_CATALOG.md  06_TOXICITY_SPEC.md  07_GRID_POLICY_LIBRARY.md  08_STATE_MACHINE.md  09_EXECUTION_SPEC.md  10_RISK_SPEC.md  11_BACKTEST_PROTOCOL.md  12_ML_SPEC.md  13_OBSERVABILITY.md  14_GITHUB_WORKFLOW.md  14_SMART_ORDER_ROUTER_SPEC.md  15_ACCOUNT_SYNC_SPEC.md  15_CONSTANTS.md  16_ADAPTIVE_GRID_CONTROLLER_SPEC.md  17_ADAPTIVE_SMART_GRID_V1.md  18_FEATURE_STORE_SPEC.md  20_SAFETY_ENVELOPE.md  22_POLICY_CONTRACT.md  23_NATR_CONTRACT.md  24_NATR_SPACING_HOOK.md  25_LIVE_GRID_PLANNER_SPEC.md  26_ROLLING_INFINITE_GRID_SPEC.md  DECISIONS.md  DEV.md  DOCS_INDEX.md  GAPS.md  HOW_TO_OPERATE.md  LAUNCH_LOG.md  LAUNCH_PLAN.md  OBSERVABILITY_SLOS.md  OBSERVABILITY_STACK.md  POST_LAUNCH_ROADMAP.md  ROADMAP.md  STATE.md  branch_protection.md
docs/runbooks/: 00_EVIDENCE_INDEX.json  00_EVIDENCE_INDEX.md  00_OPS_QUICKSTART.md  01_STARTUP_SHUTDOWN.md  02_HEALTH_TRIAGE.md  03_METRICS_DASHBOARDS.md  04_KILL_SWITCH.md  05_SOAK_GATE.md  06_ALERT_RESPONSE.md  07_HA_OPERATIONS.md  08_SMOKE_TEST_TESTNET.md  09_MAINNET_TRADE_SMOKE.md  10_FUTURES_MAINNET_TRADE_SMOKE.md  11_RECONCILIATION_TRIAGE.md  12_ACTIVE_REMEDIATION.md  13_OPERATOR_CEREMONY.md  14_RECONCILE_E2E_SMOKE.md  15_ENABLEMENT_CEREMONY.md  16_RECONCILE_ALERTS_SLOS.md  17_LIVE_TRADE_CONNECTOR_ENABLEMENT.md  18_ML_INFERENCE_SLOS.md  19_ML_MODEL_PROMOTION.md  20_FEATURE_STORE_DATASETS.md  21_SINGLE_VENUE_LAUNCH.md  22_ACTIVE_ENABLEMENT_CEREMONY.md  23_DATA_QUALITY_TRIAGE.md  24_LATENCY_RETRY_TRIAGE.md  25_LATENCY_RETRY_ENABLEMENT_CEREMONY.md  26_FILL_TRACKER_TRIAGE.md  27_FSM_OPERATOR_OVERRIDE.md  28_SOR_FIRE_DRILL.md  29_ACCOUNT_SYNC.md  30_ACCOUNT_SYNC_FIRE_DRILL.md  31_FILL_PROB_ROLLOUT.md  32_MAINNET_ROLLOUT_FILL_PROB.md  33_FSM_ACTIVATION_AND_ROLLBACK.md  34_ROLLING_LIVE_VERIFICATION.md  ALERT_INDEX.md  README.md
docs/smart_grid/: README.md  ROADMAP.md  SPEC_V1_0.md  SPEC_V1_1.md  SPEC_V1_2.md  SPEC_V1_3.md  SPEC_V2_0.md  SPEC_V3_0.md
ml/registry/: README.md  models.json
monitoring/: alert_rules.yml  prometheus.yml  soak_thresholds.yml
monitoring/grafana/dashboards/: README.md  grinder_ml_blocks.json  grinder_ml_latency.json  grinder_ml_overview.json  grinder_overview.json  grinder_reconcile.json  grinder_trading_loop.json
scripts/: __init__.py  acceptance_packet.sh  acceptance_packet_paste.sh  build_dataset.py  build_fill_dataset_v1.py  build_onnx_artifact.py  check_soak_gate.py  check_soak_thresholds.py  check_unicode.py  docker_smoke_ha_mismatch.sh  docker_smoke_observability.sh  env_fingerprint.py  eval_fill_model_v0.py  exchange_state.py  fetch_exchange_info.py  fire_drill_account_sync.sh  fire_drill_connector_exchange_port.sh  fire_drill_connector_market_data.sh  fire_drill_execution_intents.sh  fire_drill_fill_alerts.sh  fire_drill_reconcile_budget_limits.sh  fire_drill_risk_killswitch_drawdown.sh  fire_drill_sor.sh  gen_evidence_index.py  generate_fixture.py  gh_pr_meta.sh  http_measured_client.py  http_probe.py  inject_mismatch_and_remediate.py  ops_connector_triage.sh  ops_exec_triage.sh  ops_fill_triage.sh  ops_risk_triage.sh  place_test_order.py  place_test_position.py  preflight_fill_prob.py  print_fill_cursor.py  promote_ml_model.py  run_backtest.py  run_live.py  (+34 more)
src/grinder/: __init__.py  cli.py  contracts.py  core.py  env_parse.py
src/grinder/account/: __init__.py  contracts.py  evidence.py  metrics.py  render.py  syncer.py
src/grinder/backtest/: cli.py
src/grinder/connectors/: __init__.py  base.py  binance_user_data_ws.py  binance_ws.py  binance_ws_mock.py  circuit_breaker.py  data_connector.py  errors.py  idempotency.py  live_connector.py  metrics.py  paper_execution.py  retries.py  (+1 more)
tests/: __init__.py  conftest.py
tests/fixtures/: github_pr_sample.json
tests/integration/: __init__.py  test_build_dataset_roundtrip.py  test_connector_integration.py  test_feature_store_golden_dataset.py  test_fixture_guard_trading.py  test_ha_remediation.py  test_kill_switch_integration.py  test_live_connector_integration.py  test_live_http.py  test_paper_write_path.py  test_registry_to_predict_roundtrip.py  test_train_dataset_roundtrip.py  test_train_to_artifact_roundtrip.py  test_verify_dataset_roundtrip.py
tests/live/: test_fsm_driver.py  test_fsm_evidence.py  test_fsm_metrics.py  test_fsm_orchestrator.py
tests/unit/: conftest.py  test_account_contracts.py  test_account_evidence.py  test_account_metrics.py  test_account_syncer.py  test_adaptive_policy.py  test_adaptive_policy_natr_hook_contract.py  test_artifacts.py  test_audit.py  test_auto_sizer.py  test_backtest.py  test_bar_builder.py  test_binance_futures_port.py  test_binance_port.py  test_budget_lifecycle.py  test_build_dataset.py  test_build_onnx_artifact.py  test_circuit_breaker.py  test_cli.py  test_connector_metrics.py  test_consecutive_loss_guard.py  test_consecutive_loss_wiring.py  test_constraint_provider.py  test_contracts.py  test_controller.py  test_core.py  test_cycle_engine.py  test_data_connector.py  test_data_quality.py  test_data_quality_gating.py  test_data_quality_wiring.py  test_dd_allocator.py  test_drawdown_guard_v1.py  test_emergency_exit.py  test_enablement_smoke_contract.py  test_engine_account_sync_throttle.py  test_engine_emergency_exit.py  test_env_parse.py  test_exchange_state.py  test_execution.py  (+98 more)
(+180 files in other folders)
