[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grinder"
version = "1.0.0"
description = "Enterprise-grade adaptive grid trading system for crypto perpetuals"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Grinder Team" }
]
keywords = [
    "crypto",
    "trading",
    "grid",
    "binance",
    "futures",
    "perpetuals",
    "market-making",
    "algorithmic-trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

dependencies = [
    # Core
    "pydantic>=2.0,<3.0",
    "orjson>=3.9,<4.0",
    "structlog>=24.0,<25.0",
    "rich>=13.0,<14.0",

    # Async
    "anyio>=4.0,<5.0",
    "httpx>=0.27,<1.0",
    "websockets>=12.0,<14.0",

    # Data
    "numpy>=1.26,<3.0",
    "polars>=0.20,<2.0",

    # Config
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",

    # Observability
    "prometheus-client>=0.20,<1.0",
    "opentelemetry-api>=1.23,<2.0",
    "opentelemetry-sdk>=1.23,<2.0",

    # HA (single-host redundancy)
    "redis>=5.0,<6.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4,<2.0",
    "lightgbm>=4.0,<5.0",
    "optuna>=3.5,<4.0",
    "shap>=0.44,<1.0",
]
backtest = [
    "pandas>=2.0,<3.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "plotly>=5.18,<6.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-xdist>=3.5,<4.0",
    "hypothesis>=6.98,<7.0",
    "mypy>=1.8,<2.0",
    "ruff>=0.2,<1.0",
    "pre-commit>=3.6,<4.0",
]
all = [
    "grinder[ml,backtest,dev]",
]

[project.scripts]
grinder = "grinder.cli:main"
grinder-backtest = "grinder.backtest.cli:main"
grinder-paper = "grinder.paper.cli:main"

[project.urls]
Documentation = "https://github.com/bnzr-hub/grinder#readme"
Repository = "https://github.com/bnzr-hub/grinder"
Issues = "https://github.com/bnzr-hub/grinder/issues"

# ============================================================================
# Hatch Configuration
# ============================================================================

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/grinder"]

# ============================================================================
# Ruff Configuration
# ============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.isort]
known-first-party = ["grinder"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (fixtures)
    "PLR2004", # Magic values in tests OK
]
"src/grinder/paper/engine.py" = [
    "PLR0912", # too many branches - complex pipeline logic
    "PLR0915", # too many statements - complex pipeline logic
]

# ============================================================================
# MyPy Configuration
# ============================================================================

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "websockets.*",
    "prometheus_client.*",
    "lightgbm.*",
    "optuna.*",
    "shap.*",
    "redis.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "-p", "no:warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src/grinder"]
branch = true
parallel = true
omit = [
    "src/grinder/__main__.py",
    "src/grinder/cli.py",
]

[tool.coverage.paths]
source = [
    "src/",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 80
show_missing = true
skip_covered = true

# ============================================================================
# Hypothesis Configuration
# ============================================================================

[tool.hypothesis]
profiles.ci.max_examples = 1000
profiles.dev.max_examples = 10
profiles.debug.max_examples = 10
profiles.debug.verbosity = "verbose"
